--- a/requirements.txt
+++ b/requirements.txt
@@ -16,17 +16,17 @@ h5py==3.14.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
-keras==3.10.0
+# keras==3.10.0
 kiwisolver==1.4.8
 libclang==18.1.1
 Markdown==3.8.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.3
+# matplotlib==3.10.3
 mdurl==0.1.2
 ml_dtypes==0.5.1
 namex==0.1.0
-numpy==1.26.4
+# numpy==1.26.4
 opt_einsum==3.4.0
 optree==0.16.0
 packaging==25.0
