--- a/requirements.txt
+++ b/requirements.txt
@@ -41,9 +41,9 @@ requests==2.32.4
 rich==14.0.0
 setuptools==80.9.0
 six==1.17.0
-# tensorboard==2.19.0
-# tensorboard-data-server==0.7.2
-# tensorflow==2.19.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
 termcolor==3.1.0
 typing_extensions==4.14.1
 tzdata==2025.2
