--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cycler==0.12.1
 Flask==3.1.1
 flatbuffers==25.2.10
 fonttools==4.58.5
+flask-cors==6.0.1
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.73.1
