--- a/requirements.txt
+++ b/requirements.txt
@@ -3,33 +3,35 @@ astunparse==1.6.3
 blinker==1.9.0
 certifi==2025.7.14
 charset-normalizer==3.4.2
-click==8.2.1
-contourpy==1.3.2
+click==8.1.8
+contourpy==1.3.0
 cycler==0.12.1
 Flask==3.1.1
-flatbuffers==25.2.10
-fonttools==4.58.5
 flask-cors==6.0.1
+flatbuffers==25.2.10
+fonttools==4.59.0
 gast==0.6.0
 google-pasta==0.2.0
-grpcio==1.73.1
+grpcio==1.74.0
 h5py==3.14.0
 idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 keras==3.10.0
-kiwisolver==1.4.8
+kiwisolver==1.4.7
 libclang==18.1.1
 Markdown==3.8.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.3
+matplotlib==3.9.4
 mdurl==0.1.2
-ml_dtypes==0.5.1
+ml-dtypes==0.3.2
 namex==0.1.0
 numpy==1.26.4
 opt_einsum==3.4.0
-optree==0.16.0
+optree==0.17.0
 packaging==25.0
 pandas==2.3.1
 pillow==11.3.0
@@ -39,16 +41,17 @@ pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.4
-rich==14.0.0
-setuptools==80.9.0
+rich==14.1.0
 six==1.17.0
-tensorboard==2.19.0
+tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.19.0
+tensorflow==2.16.2
+tensorflow-io-gcs-filesystem==0.37.1
+tensorflow-macos==2.16.2
 termcolor==3.1.0
 typing_extensions==4.14.1
 tzdata==2025.2
-urllib3==2.5.0
+urllib3==1.26.18
 Werkzeug==3.1.3
-wheel==0.45.1
 wrapt==1.17.2
+zipp==3.23.0
